@@ -1119,8 +1119,9 @@ void UpdateEditor()
                             Block[numBlock] = EditorCursor.Block;
                             Block[numBlock].DefaultType = Block[numBlock].Type;
                             Block[numBlock].DefaultSpecial = Block[numBlock].Special;
+                            Block[numBlock].DefaultSpecial2 = Block[numBlock].Special2;
                             syncLayersTrees_Block(numBlock);
-                            // if(MagicHand == true)
+                            // if(MagicHand)
                             // {
                             //     for(A = -FLBlocks; A <= FLBlocks; A++)
                             //     {
@@ -2693,6 +2694,7 @@ void BlockFill(Location_t Loc)
         Block[numBlock] = EditorCursor.Block;
         Block[numBlock].DefaultType = Block[numBlock].Type;
         Block[numBlock].DefaultSpecial = Block[numBlock].Special;
+        Block[numBlock].DefaultSpecial2 = Block[numBlock].Special2;
         Block[numBlock].Location = Loc;
         tempLoc = Loc;
         tempLoc.X = tempLoc.X - Loc.Width;
